added basic descriptions to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,32 @@
     <title>My Personal Website</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <script src="script.js"></script>
+
+<!-- Navbar -->
+
+    <div class="top-container">
+    <h2>Howdy! I'm</h2>
+    <h1>Rebekah Figueroa</h1>
+    <h3>Chemist | Product Manager | Software Engineering student</h3>
+    <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi exercitationem delectus incidunt tenetur perferendis, quam ab ullam eaque facilis voluptate voluptatibus? Velit blanditiis placeat, accusamus rerum officiis quasi dolore illum.</h5>
+    <img src="./images/headshot.png" alt="headshot">
+    <button>LET'S CHAT</button>
+  </div>
+
+  <div class="about-me-container">
+    <h3>A bit about me: </h3>
+    <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa praesentium nemo laboriosam est, ipsam ad impedit itaque explicabo fugiat inventore libero quis reiciendis eos dolorem nesciunt, asperiores magni consectetur sequi!</h4>
+  </div>
+  
+  <div class="skills-container">
+
+  </div>
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/rebekah-figueroa-6a486372/">LinkedIn</a>
+    <p class="citing" >© 2022 Rebekah Figueroa.</p>
+  </div>
+
+  <script src="script.js"></script>
   </body>
 </html>
