--- a/index.html
+++ b/index.html
@@ -2,19 +2,66 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
+
+  <!-- CSS Stylesheets -->
+  <link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+  crossorigin="anonymous"
+/>
+<link rel="stylesheet" href="style.css" />
+
+<!-- JavaScript Bundle with Popper -->
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+  crossorigin="anonymous"
+></script>
+
     <title>My Personal Website</title>
   </head>
   <body>
 
 <!-- Navbar -->
 
+
+<header class="header">
+  <p>Rebekah Figueroa</p>
+
+  <nav class="main-nav">
+    <ul class="main-nav-list">
+      <li>
+        <a href="#" class="main-nav-link">About Me</a>
+      </li>
+
+      <li>
+        <a href="#" class="main-nav-link">Work Experience</a>
+      </li>
+      <li>
+        <a href="#" class="main-nav-link">Projects</a>
+      </li>
+      <li>
+        <a href="#" class="main-nav-link">Contact Me</a>
+      </li>
+    </ul>
+  </nav>
+</header>
+
+<!-- Introduction section w/ headshot -->
     <div class="top-container">
-    <h2>Howdy! I'm</h2>
-    <h1>Rebekah Figueroa</h1>
-    <h3>Chemist | Product Manager | Software Engineering student</h3>
-    <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi exercitationem delectus incidunt tenetur perferendis, quam ab ullam eaque facilis voluptate voluptatibus? Velit blanditiis placeat, accusamus rerum officiis quasi dolore illum.</h5>
-    <img src="./images/headshot.png" alt="headshot">
-    <button>LET'S CHAT</button>
+      <div class="hero-description">
+        <h2>Howdy! I'm</h2>
+        <h1>Rebekah Figueroa</h1>
+        <h4>Chemist | Product Manager | Software Engineering Student</h4>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi exercitationem delectus incidunt tenetur perferendis, quam ab ullam eaque facilis voluptate voluptatibus? Velit blanditiis placeat, accusamus rerum officiis quasi dolore illum.</p>
+        <a href="https://www.linkedin.com/in/rebekah-figueroa-6a486372/" class="btn btn--full margin-right-sm btn-hero">LinkedIn</a>
+        <a href="https://github.com/RebekahFigueroa" class="btn btn--full margin-right-sm btn-hero">GitHub</a>
+      </div>
+      <div class="hero-img-rounded">
+        <img class="hero-img" src="./images/headshot.png" alt="headshot">
+      </div>
+    
   </div>
 
   <div class="about-me-container">
@@ -28,6 +75,7 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/rebekah-figueroa-6a486372/">LinkedIn</a>
+    <a class="footer-link" href="https://github.com/RebekahFigueroa">GitHub</a>
     <p class="citing" >© 2022 Rebekah Figueroa.</p>
   </div>
 
