completed all html and css for website

--- a/index.html
+++ b/index.html
@@ -342,19 +342,16 @@
 <div class="timeline-component timeline-component-bottom ">
   <div class="timeline-date">May 2016</div>
 </div>
-
-
-
   </div>
 </section>
-  <!-- Gives information about skills -->
-  <div class="skills-container">
 
+  <!-- Gives information about Projects -->
+  <div class="projects-container">
+    <h3 class="projects-text">Expect projects to update here as I move along in the program!</h3>
+    <img src="./images/work_in_progress-removebg-preview.png" alt="work in progress sign" class="work-in-progress-img">
   </div>
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/rebekah-figueroa-6a486372/">LinkedIn</a>
-    <a class="footer-link" href="https://github.com/RebekahFigueroa">GitHub</a>
     <p class="citing" >© 2022 Rebekah Figueroa.</p>
   </div>
 
